# Selenium-Pytest

./: pyproject.toml
sel_pyt/: first_script.py
